--- a/common/src/main/resources/assets/ftbchunks/lang/ru_ru.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/ru_ru.json
@@ -1,50 +1,181 @@
 {
-	"ftbchunks": "FTB Chunks",
-	"ftbchunks.noise": "Шум",
-	"ftbchunks.shadows": "Тени",
-	"ftbchunks.chunk_grid": "Сетка чанков",
-	"ftbchunks.reduced_color_palette": "Упрощенная палитка цветов",
-	"ftbchunks.saturation": "Насыщенность",
-	"ftbchunks.debug_info": "Отладочная информация",
-	"ftbchunks.claimed_chunks_on_map": "Показывать занятые чанки на карте",
-	"ftbchunks.own_claimed_chunks_on_map": "Показывать занятые вами чанки на карте",
-	"ftbchunks.in_world_waypoints": "Показывать путевые точки в мире",
-	"ftbchunks.death_waypoints": "Создавать точку с местом смерти",
-	"ftbchunks.map_mode": "Режим карты",
-	"ftbchunks.water_height_factor": "Учитывать высоту над уровнем моря",
-	"ftbchunks.minimap": "Расположение миникарты",
-	"ftbchunks.minimap_scale": "Масштаб миникарты",
-	"ftbchunks.minimap_locked_north": "Миникарта направлена на север",
-	"ftbchunks.minimap_waypoints": "Путевые точки на миникарте",
-	"ftbchunks.minimap_entities": "Сущности на миникарте",
-	"ftbchunks.minimap_entity_heads": "Головы сущностей на миникарте",
-	"ftbchunks.minimap_player_heads": "Головы игроков на миникарте",
-	"ftbchunks.minimap_large_entities": "Большие сущности на миникарте",
-	"ftbchunks.minimap_xyz": "Координаты XYZ на миникарте",
-	"ftbchunks.minimap_biome": "Биом на миникарте",
-	"ftbchunks.minimap_blur": "Замыление миникарты",
-	"ftbchunks.minimap_compass": "Компас на миникарте",
-	"ftbchunks.minimap_visibility": "Прозрачность миникарты",
-	"ftbchunks.minimap_zone": "Зона миникарты",
-	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
-	"key.ftbchunks.map": "Открыть карту FTB Chunks",
-	"wilderness": "Пустота",
-	"ftbchunks.no_server_mod": "Для работы FTB Chunks требуется также мод на сервере!",
-	"ftbchunks.already_claimed": "Чанк уже занят %s",
-	"ftbchunks.gui.claimed": "Занято",
-	"ftbchunks.gui.force_loaded": "Подгружено",
-	"ftbchunks.gui.allies": "Союзники",
-	"ftbchunks.gui.ally_whitelist": "Белый список союзников",
-	"ftbchunks.gui.ally_blacklist": "Черный список союзников",
-	"ftbchunks.gui.large_map": "Большая карта",
-	"ftbchunks.gui.claimed_chunks": "Занятые чанки",
-	"ftbchunks.gui.waypoints": "Путевые точки",
-	"ftbchunks.gui.add_waypoint": "Добавить точку",
-	"ftbchunks.gui.settings": "Настройки",
-	"ftbchunks.gui.sync": "Поделиться картой с союзниками",
-	"ftbteamsconfig.ftbchunks.allow_fake_players": "Разрешить Fake игровов",
-	"ftbteamsconfig.ftbchunks.block_edit_mode": "Запретить изменение блоков",
-	"ftbteamsconfig.ftbchunks.block_interact_mode": "Запретить взаимодействие с блоками",
-	"ftbteamsconfig.ftbchunks.minimap_mode": "Режим миникарты",
-	"ftbteamsconfig.ftbchunks.location_mode": "Режим местоположения"
+  "ftbchunks": "FTB Chunks",
+  "ftbchunks.noise": "Шум",
+  "ftbchunks.shadows": "Тени",
+  "ftbchunks.chunk_grid": "Сетка чанков",
+  "ftbchunks.reduced_color_palette": "Упрощенная палитка цветов",
+  "ftbchunks.saturation": "Насыщенность",
+  "ftbchunks.debug_info": "Информация об отладке",
+  "ftbchunks.claimed_chunks_on_map": "Показывать занятые чанки на карте",
+  "ftbchunks.own_claimed_chunks_on_map": "Показывать занятые вами чанки на карте",
+  "ftbchunks.in_world_waypoints": "Показывать путевые точки в мире",
+  "ftbchunks.death_waypoints": "Создавать точку с местом смерти",
+  "ftbchunks.death_waypoint_autoremove_distance": "Автоматическое удаление расстояния до точки смерти",
+  "ftbchunks.death_waypoint_autoremove_distance.tooltip": "Если > 0, ближайшая точка смерти будет автоматически удалена, если она находится ближе этого расстояния от вас.",
+  "ftbchunks.map_mode": "Режим карты",
+  "ftbchunks.zoom_warning": "Максимальное уменьшение масштаба ограничено из-за ограничений памяти.",
+  "ftbchunks.waypoint_fade_distance": "Путевые маяки: минимальное расстояние затухания",
+  "ftbchunks.waypoint_dot_fade_distance": "Точки маршрута: минимальное расстояние затухания",
+  "ftbchunks.waypoint_max_distance": "Путевые точки: максимальное расстояние прорисовки",
+  "ftbchunks.biome_blend": "Смесь биомов",
+  "ftbchunks.biome_blend.none": "Нет (самый быстрый)",
+  "ftbchunks.biome_blend.blend_3x3": "Смешать 3x3",
+  "ftbchunks.biome_blend.blend_5x5": "Смешать 5x5",
+  "ftbchunks.biome_blend.blend_7x7": "Смешать 7x7",
+  "ftbchunks.biome_blend.blend_9x9": "Смешать 9x9",
+  "ftbchunks.biome_blend.blend_11x11": "Смешать 11x11",
+  "ftbchunks.biome_blend.blend_13x13": "Смешать 13x13",
+  "ftbchunks.biome_blend.blend_15x15": "Blend 15x15 (самый медленный)",
+  "ftbchunks.water_height_factor": "Учитывать высоту над уровнем моря",
+  "ftbchunks.only_surface_entities": "Только поверхностные объекты",
+  "ftbchunks.experimental_performance_improvement": "Экспериментальное улучшение производительности",
+  "ftbchunks.memory": "Использование памяти",
+  "ftbchunks.minimap": "Расположение миникарты",
+  "ftbchunks.minimap.enabled": "Включено",
+  "ftbchunks.minimap.position": "Позиция",
+  "ftbchunks.minimap.position_offset_x": "Смещение позиции X",
+  "ftbchunks.minimap.position_offset_y": "Смещение позиции Y",
+  "ftbchunks.minimap.position_offset_condition": "Условие смещения позиции",
+  "ftbchunks.minimap.position.none": "Никто",
+  "ftbchunks.minimap.position.bottom_left": "Внизу слева",
+  "ftbchunks.minimap.position.left": "Левый",
+  "ftbchunks.minimap.position.top_left": "Верхний левый",
+  "ftbchunks.minimap.position.top_right": "В правом верхнем углу",
+  "ftbchunks.minimap.position.right": "Верно",
+  "ftbchunks.minimap.position.bottom_right": "Внизу справа",
+  "ftbchunks.minimap.scale": "Масштаб миникарты",
+  "ftbchunks.minimap.locked_north": "Миникарта направлена на север",
+  "ftbchunks.minimap.show_player_when_unlocked": "Показывать игрока, когда он не привязан к северу",
+  "ftbchunks.minimap.waypoints": "Путевые точки на миникарте",
+  "ftbchunks.minimap.entities": "Сущности на миникарте",
+  "ftbchunks.minimap.entity_heads": "Головы сущностей на миникарте",
+  "ftbchunks.minimap.player_heads": "Головы игроков на миникарте",
+  "ftbchunks.minimap.large_entities": "Большие сущности на миникарте",
+  "ftbchunks.minimap.zoom": "Увеличить",
+  "ftbchunks.minimap.xyz": "Координаты XYZ на миникарте",
+  "ftbchunks.minimap.biome": "Биом на миникарте",
+  "ftbchunks.minimap.blur_mode": "Размытие миникарты",
+  "ftbchunks.minimap.blur_mode.auto": "Авто",
+  "ftbchunks.minimap.blur_mode.on": "Включенный",
+  "ftbchunks.minimap.blur_mode.off": "Выключенный",
+  "ftbchunks.minimap.compass": "Компас на миникарте",
+  "ftbchunks.minimap.visibility": "Прозрачность миникарты",
+  "ftbchunks.minimap.zone": "Зона миникарты",
+  "ftbchunks.minimap.square": "Квадратная мини-карта",
+  "ftbchunks.minimap.proportional": "Пропорциональный размер",
+  "ftbchunks.minimap.proportional.tooltip": "Если установлено значение true, размер мини-карты пропорционален 10%% ширины экрана (можно изменить с помощью параметра «Масштаб»).\n",
+  "sidebar_button.ftbchunks.chunks": "FTB Chunks",
+  "sidebar_button.ftbchunks.claim_chunks": "FTB Chunks: Менеджер по претензиям",
+  "key.categories.ftbchunks": "FTB Chunks",
+  "key.ftbchunks.map": "Открыть карту FTB Chunks",
+  "key.ftbchunks.claim_manager": "Открыть менеджер по претензиям",
+  "key.ftbchunks.minimap.zoomIn": "Увеличить миникарту",
+  "key.ftbchunks.minimap.zoomOut": "Уменьшить мини-карту",
+  "key.ftbchunks.add_waypoint": "Быстрое добавление путевой точки",
+  "key.ftbchunks.waypoint_manager": "Менеджер путевых точек",
+  "wilderness": "Пустота",
+  "ftbchunks.no_server_mod": "Для работы FTB Chunks требуется также мод на сервере!",
+  "ftbchunks.already_claimed": "Чанк уже занят %s",
+  "ftbchunks.deathpoint_removed": "Маршрутная точка '%s' автоматически удалена",
+  "ftbchunks.gui.claimed": "Занято",
+  "ftbchunks.gui.force_loaded": "Подгружено",
+  "ftbchunks.gui.force_load_expires": "Срок принудительной загрузки истек",
+  "ftbchunks.gui.allies": "Союзники",
+  "ftbchunks.gui.ally_whitelist": "Белый список союзников",
+  "ftbchunks.gui.ally_blacklist": "Черный список союзников",
+  "ftbchunks.gui.large_map": "Большая карта",
+  "ftbchunks.gui.claimed_chunks": "Занятые чанки",
+  "ftbchunks.gui.waypoints": "Менеджер путевых точек",
+  "ftbchunks.gui.add_waypoint": "Добавить точку",
+  "ftbchunks.gui.settings": "Настройки",
+  "ftbchunks.gui.settings.server": "Настройки сервера",
+  "ftbchunks.gui.sync": "Поделитесь картой с союзниками",
+  "ftbchunks.gui.clear_deathpoints": "Очистить все путевые точки смерти",
+  "ftbchunks.gui.delete_waypoint": "Удалить путевую точку '%s'?",
+  "ftbchunks.gui.change_color": "Изменить цвет",
+  "ftbchunks.gui.hold_alt_for_dates": "Удерживайте Alt: показать абсолютное время",
+  "ftbchunks.gui.mouse_wheel_expiry": "Колесо мыши: отрегулируйте срок действия принудительной нагрузки.",
+  "ftbchunks.gui.teleport": "Телепортироваться",
+  "ftbteamsconfig.ftbchunks": "Свойства фрагментов FTB",
+  "ftbteamsconfig.ftbchunks.allow_fake_players": "Разрешить Fake игровов",
+  "ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Разрешить всем Fake игрокам как и союзникам команды.\n",
+  "ftbteamsconfig.ftbchunks.allow_named_fake_players": "Поддельные имена/идентификаторы союзных игроков",
+  "ftbteamsconfig.ftbchunks.allow_named_fake_players.tooltip": "Относитесь к этим фальшивым игрокам как к союзникам команды.\n",
+  "ftbteamsconfig.ftbchunks.allow_fake_players_by_id": "Разрешить поддельных игроков по идентификатору игрока",
+  "ftbteamsconfig.ftbchunks.allow_fake_players_by_id.tooltip": "Разрешает фальшивым игрокам, имеющим идентификатор реального игрока, доступ к вашим заявлениям, ЕСЛИ этому настоящему игроку будет разрешено, либо в качестве союзника, либо в качестве члена команды. ",
+  "ftbteamsconfig.ftbchunks.allow_explosions": "Разрешить взрывы",
+  "ftbteamsconfig.ftbchunks.allow_explosions.tooltip": "Должны ли взрывы повреждать блоки в заявленных областях?",
+  "ftbteamsconfig.ftbchunks.allow_mob_griefing": "Разрешить действия, вызывающие скорбь толпы",
+  "ftbteamsconfig.ftbchunks.allow_mob_griefing.tooltip": "Следует ли разрешить мобам повреждать блоки в заявленных областях?\n",
+  "ftbteamsconfig.ftbchunks.block_edit_and_interact_mode": "Редактирование блока/режим взаимодействия",
+  "ftbteamsconfig.ftbchunks.block_edit_and_interact_mode.tooltip": "Используется, когда блоки размещаются, ломаются или взаимодействуют с ними.",
+  "ftbteamsconfig.ftbchunks.block_edit_mode": "Запретить изменение блоков",
+  "ftbteamsconfig.ftbchunks.block_edit_mode.tooltip": "Используется, когда блоки размещаются или ломаются.",
+  "ftbteamsconfig.ftbchunks.block_interact_mode": "Запретить взаимодействие с блоками",
+  "ftbteamsconfig.ftbchunks.block_interact_mode.tooltip": "Используется при щелчке правой кнопкой мыши по блокам, например. ",
+  "ftbteamsconfig.ftbchunks.entity_interact_mode": "Режим взаимодействия с объектами",
+  "ftbteamsconfig.ftbchunks.entity_interact_mode.tooltip": "Используется при щелчке правой кнопкой мыши по объектам",
+  "ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode": "Режим атаки неживых существ",
+  "ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode.tooltip": "Используется при щелчке левой кнопкой мыши по неживым объектам (картинам, рамкам предметов и т. д.).",
+  "ftbteamsconfig.ftbchunks.minimap_mode": "Режим миникарты",
+  "ftbteamsconfig.ftbchunks.location_mode": "Режим местоположения",
+  "ftbteamsconfig.ftbchunks.location_mode.tooltip": "Определяет, кто может видеть вас на карте или мини-карте (за пределами обычного диапазона отслеживания)",
+  "ftbteamsconfig.ftbchunks.claim_visibility": "Заявить о видимости",
+  "ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "Определяет, кто может видеть ваши претензии на карте или мини-карте.",
+  "ftbchunks.fake_players": "Разрешить фальшивых игроков",
+  "ftbchunks.fake_players.tooltip": "ПРОВЕРКА: проверьте доступ фальшивого игрока, как и любого реального игрока.\n",
+  "ftbchunks.max_claimed_chunks": "Максимальное количество приватных чанков на игрока",
+  "ftbchunks.max_claimed_chunks.tooltip": "Это значение по умолчанию может быть переопределено узлом разрешений FTB Ranks «ftbchunks.max_claimed».",
+  "ftbchunks.max_force_loaded_chunks": "Максимальное количество подгруженных чанков на игрока",
+  "ftbchunks.max_force_loaded_chunks.tooltip": "Это значение по умолчанию может быть переопределено узлом разрешений FTB Ranks «ftbchunks.max_force_loaded».",
+  "ftbchunks.chunk_load_offline": "Разрешить принудительную загрузку для офлайн-игроков",
+  "ftbchunks.chunk_load_offline.tooltip": "Поведение резервной загрузки автономного фрагмента, когда\n ",
+  "ftbchunks.force_load_mode": "Режим принудительной загрузки",
+  "ftbchunks.force_load_mode.tooltip": "НИКОГДА: разрешать принудительную загрузку чанков только в том случае, если в команде-владельце есть хотя бы один онлайн-игрок.\n",
+  "ftbchunks.disable_protection": "Отключить защиту претензий",
+  "ftbchunks.disable_protection.tooltip": "Полезно для частных серверов, где всем доверяют.\n",
+  "ftbchunks.ally_mode": "Разрешить игроку изменять настройки союзников",
+  "ftbchunks.ally_mode.tooltip": "ПО УМОЛЧАНИЮ: статус союзника FTB Teams проверяется, чтобы определить, являются ли игроки союзниками.\n",
+  "ftbchunks.claim_dimension_blacklist": "Черный список измерений",
+  "ftbchunks.claim_dimension_blacklist.tooltip": "Список идентификаторов измерений, фрагменты которых не могут быть заявлены.\n",
+  "ftbchunks.claim_dimension_whitelist": "Белый список измерений",
+  "ftbchunks.claim_dimension_whitelist.tooltip": "Список идентификаторов измерений, для которых могут быть заявлены фрагменты. ",
+  "ftbchunks.no_wilderness": "Защитите невостребованные регионы",
+  "ftbchunks.no_wilderness.tooltip": "Если это правда, перед изменением необходимо заявить права на фрагменты.\n",
+  "ftbchunks.no_wilderness_dimensions": "Защита невостребованных регионов по измерениям",
+  "ftbchunks.no_wilderness_dimensions.tooltip": "Список идентификаторов измерений, фрагменты которых необходимо заявить перед изменением.\n",
+  "ftbchunks.force_disable_minimap": "Отключить миникарту для клиентов",
+  "ftbchunks.max_idle_days_before_unclaim": "Максимальное количество дней простоя до отмены требования",
+  "ftbchunks.max_idle_days_before_unclaim.tooltip": "Если ни один член команды не войдет в систему в течение этого количества дней,\n",
+  "ftbchunks.max_idle_days_before_unforce": "Максимальное количество дней простоя перед Unforceload",
+  "ftbchunks.max_idle_days_before_unforce.tooltip": "Если ни один член команды не войдет в систему в течение этого количества дней,\n",
+  "ftbchunks.long_range_tracker_interval": "Интервал отслеживания игроков на дальней дистанции",
+  "ftbchunks.long_range_tracker_interval.tooltip": "Интервал в тиках для отправки обновлений клиентам с данными отслеживания игроков на большом расстоянии.\n",
+  "ftbchunks.protect_unknown_explosions": "Предотвратите взрывы из неизвестных источников",
+  "ftbchunks.protect_unknown_explosions.tooltip": "Некоторые источники взрывов (например, Гасты) не могут быть определены в коде.\n",
+  "ftbchunks.hard_team_claim_limit": "Лимит командных заявок Hard Max",
+  "ftbchunks.hard_team_claim_limit.tooltip": "Жесткий лимит заявок для партийных команд, независимо от количества участников или режима расчета партийного лимита.\n",
+  "ftbchunks.hard_team_force_limit": "Лимит принудительной нагрузки команды Hard Max",
+  "ftbchunks.hard_team_force_limit.tooltip": "Жесткий лимит принудительной нагрузки для партийных команд, независимо от количества участников или режима расчета партийного лимита.\n",
+  "ftbchunks.party_limit_mode": "Режим расчета лимита вечеринки",
+  "ftbchunks.party_limit_mode.tooltip": "Метод предъявления претензии стороной",
+  "ftbchunks.require_game_stage": "Требовать игровую сцену для сопоставления",
+  "ftbchunks.require_game_stage.tooltip": "Если это правда, у игроков должен быть игровой этап «ftbchunks_mapping» (требуется KubeJS и/или Gamestages), чтобы иметь возможность открыть карту или просмотреть мини-карту.",
+  "ftbchunks.location_mode_override": "Переопределить команду «Видимость местоположения»",
+  "ftbchunks.location_mode_override.tooltip": "Если установлено значение true, настройки команды «Видимость местоположения» игнорируются, и все игроки могут видеть друг друга в любом месте карты.",
+  "ftbchunks.memory.region_release_time": "Тайм-аут освобождения региона простоя",
+  "ftbchunks.memory.region_release_time.tooltip": "Тайм-аут в секундах для освобождения данных для регионов 512x512, к которым в последнее время не было доступа.\n",
+  "ftbchunks.memory.autorelease_on_map_close": "Автовыпуск регионов на карте закрыть",
+  "ftbchunks.memory.autorelease_on_map_close.tooltip": "Когда большая карта закрыта, данные региона автоматически публикуются до этого числа.\n",
+  "ftbchunks.memory.max_zoom_constraint": "Ограничить уменьшение масштаба карты",
+  "ftbchunks.memory.max_zoom_constraint.tooltip": "Если установлено значение true, максимальное уменьшение масштаба карты ограничено количеством исследованных регионов и объемом доступной памяти.\n",
+  "ftbchunks.claim_result": "Чанки изменены: %d / %d",
+  "ftbchunks.claim_result.other": "Неизвестные проблемы",
+  "ftbchunks.claim_result.not_owner": "Не владелец чанка",
+  "ftbchunks.claim_result.not_enough_power": "Достигнут лимит заявок/принудительных нагрузок",
+  "ftbchunks.claim_result.already_claimed": "Чанк уже заявил права",
+  "ftbchunks.claim_result.dimension_forbidden": "Заявления запрещены в этом измерении",
+  "ftbchunks.claim_result.not_claimed": "Чанк не востребован",
+  "ftbchunks.claim_result.already_loaded": "Чанк уже загружен",
+  "ftbchunks.claim_result.not_loaded": "Чанк не загружен"
 }
