chore: better server config organisation
created some subgroups

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -143,49 +143,52 @@
 	"ftbteamsconfig.ftbchunks.location_mode.tooltip": "Controls who can see you on the map or minimap (outside the normal vanilla tracking range)",
 	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility",
 	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "Controls who can see your claims on the map or minimap",
-	"ftbchunks.fake_players": "Allow Fake Players",
-	"ftbchunks.fake_players.tooltip": "CHECK: check fake player access like any real player\nDENY: never allow fake players\nALLOW: always allow fake players",
-	"ftbchunks.max_claimed_chunks": "Max Claimed Chunks per Player",
-	"ftbchunks.max_claimed_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_claimed` permission node.",
-	"ftbchunks.max_force_loaded_chunks": "Max Forcedloaded Chunks per Player",
-	"ftbchunks.max_force_loaded_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_force_loaded` permission node.",
-	"ftbchunks.force_load_mode": "Forceloading Mode",
-	"ftbchunks.force_load_mode.tooltip": "NEVER: only allow chunk force-loading if the owning team has at least one online player\nALWAYS: always allow force-loading, even if no players are online\nDEFAULT: allow force-loading IF the team has at least one player with the FTB Ranks 'ftbchunks.chunk_load_offline' permission",
+	"ftbchunks.fake_players": "Fake Players",
+	"ftbchunks.claiming": "Chunk Claiming",
+	"ftbchunks.force_loading": "Force-Loading",
+	"ftbchunks.fake_players.fake_players": "Allow Fake Players",
+	"ftbchunks.fake_players.fake_players.tooltip": "CHECK: check fake player access like any real player\nDENY: never allow fake players\nALLOW: always allow fake players",
+	"ftbchunks.claiming.max_claimed_chunks": "Max Claimed Chunks per Player",
+	"ftbchunks.claiming.max_claimed_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_claimed` permission node.",
+	"ftbchunks.force_loading.max_force_loaded_chunks": "Max Forcedloaded Chunks per Player",
+	"ftbchunks.force_loading.max_force_loaded_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_force_loaded` permission node.",
+	"ftbchunks.force_loading.force_load_mode": "Offline Forceloading Mode",
+	"ftbchunks.force_loading.force_load_mode.tooltip": "NEVER: only allow chunk force-loading if the owning team has at least one online player\nALWAYS: always allow force-loading, even if no players are online\nDEFAULT: allow force-loading IF the team has at least one player with the FTB Ranks 'ftbchunks.chunk_load_offline' permission",
 	"ftbchunks.disable_protection": "Disable Claim Protection",
 	"ftbchunks.disable_protection.tooltip": "Useful for private servers where everyone is trusted, and claims are only used for force-loading",
 	"ftbchunks.pvp_mode": "Allow PvP Combat in Claimed Chunks",
 	"ftbchunks.pvp_mode.tooltip": "ALWAYS: allow PvP combat in all claimed chunks\nNEVER: prevent PvP in all claimed chunks\nPER_TEAM: teams can decide if PvP is allowed in their claims via team property",
 	"ftbchunks.ally_mode": "Allow Player to Change Ally Settings",
 	"ftbchunks.ally_mode.tooltip": "DEFAULT: FTB Teams ally status is checked to decide if players are allied\nFORCED_ALL: all players are always considered to be allied\nFORCED_NONE: no players are ever considered to be allied",
-	"ftbchunks.claim_dimension_blacklist": "Dimension Blacklist",
-	"ftbchunks.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks may not be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
-	"ftbchunks.claim_dimension_whitelist": "Dimension Whitelist",
-	"ftbchunks.claim_dimension_whitelist.tooltip": "Whitelist for dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\".\nSame syntax as for \"Dimension Blacklist\"",
+	"ftbchunks.claiming.claim_dimension_blacklist": "Dimension Blacklist",
+	"ftbchunks.claiming.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks may not be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
+	"ftbchunks.claiming.claim_dimension_whitelist": "Dimension Whitelist",
+	"ftbchunks.claiming.claim_dimension_whitelist.tooltip": "Whitelist for dimension ID's where chunks may be claimed. If non-empty, dimension *must* be in this list (and also not in \"Dimension Blacklist\".\nSame syntax as for \"Dimension Blacklist\"",
 	"ftbchunks.no_wilderness": "Protect Unclaimed Regions",
 	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before they can be built on",
 	"ftbchunks.no_wilderness_dimensions": "Protect Unclaimed Regions Per-Dimension",
 	"ftbchunks.no_wilderness_dimensions.tooltip": "List of dimension ID's where chunks must be claimed before modifying.\nE.g. add \"minecraft:the_nether\" to require chunks to be claimed in the Nether.\nWildcards are allowed, e.g. \"othermod:*\" matches all dimensions added by \"othermod\"",
 	"ftbchunks.force_disable_minimap": "Disable Minimap for Clients",
-	"ftbchunks.max_idle_days_before_unclaim": "Max Idle Days Before Unclaim",
-	"ftbchunks.max_idle_days_before_unclaim.tooltip": "If no team member logs in for this many days, the team's claims will be released.\nSetting this to 0 disables auto-unclaiming.",
-	"ftbchunks.max_idle_days_before_unforce": "Max Idle Days Before Unforceload",
-	"ftbchunks.max_idle_days_before_unforce.tooltip": "If no team member logs in for this many days, any force-loaded chunks will no longer be force-loaded.\nSetting this to 0 disables auto-unforceloading.",
+	"ftbchunks.claiming.max_idle_days_before_unclaim": "Max Idle Days Before Unclaim",
+	"ftbchunks.claiming.max_idle_days_before_unclaim.tooltip": "If no team member logs in for this many days, the team's claims will be released.\nSetting this to 0 disables auto-unclaiming.",
+	"ftbchunks.force_loading.max_idle_days_before_unforce": "Max Idle Days Before Unforceload",
+	"ftbchunks.force_loading.max_idle_days_before_unforce.tooltip": "If no team member logs in for this many days, any force-loaded chunks will no longer be force-loaded.\nSetting this to 0 disables auto-unforceloading.",
 	"ftbchunks.long_range_tracker_interval": "Long Range Player Tracker Interval",
 	"ftbchunks.long_range_tracker_interval.tooltip": "Interval in ticks to send updates to clients with long-range player tracking data.\nLower values mean more frequent updates but more server load and network traffic; be careful with this, especially on busy servers.\nSetting this to 0 disables long-range tracking.",
 	"ftbchunks.protect_unknown_explosions": "Prevent Explosions from Unknown Sources",
 	"ftbchunks.protect_unknown_explosions.tooltip": "Some explosion sources (e.g. Ghasts) can't be determined in code.\nIf this setting is true, damage from these explosion is prevented in protected chunks.",
-	"ftbchunks.hard_team_claim_limit": "Hard Max Team Claim Limit",
-	"ftbchunks.hard_team_claim_limit.tooltip": "Hard claim limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
-	"ftbchunks.hard_team_force_limit": "Hard Max Team Forceload Limit",
-	"ftbchunks.hard_team_force_limit.tooltip": "Hard force-load limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
-	"ftbchunks.party_limit_mode": "Party Limit Calculation Mode",
-	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits.",
+	"ftbchunks.claiming.hard_team_claim_limit": "Hard Max Team Claim Limit",
+	"ftbchunks.claiming.hard_team_claim_limit.tooltip": "Hard claim limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.force_loading.hard_team_force_limit": "Hard Max Team Forceload Limit",
+	"ftbchunks.force_loading.hard_team_force_limit.tooltip": "Hard force-load limit for party teams, regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.claiming.party_limit_mode": "Party Limit Calculation Mode",
+	"ftbchunks.claiming.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits.",
 	"ftbchunks.require_game_stage": "Require Game Stage for Mapping",
 	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap",
 	"ftbchunks.location_mode_override": "Override Team \"Location Visibility\"",
 	"ftbchunks.location_mode_override.tooltip": "If true, team \"Location Visibility\" settings are ignored, and all players can see each other anywhere on the map",
-	"ftbchunks.max_prevented_log_age": "Fake Player Prevented Access Log Age",
-	"ftbchunks.max_prevented_log_age.tooltip": "Age in days to keep logs of prevented fake player access\nNote: not fully implemented feature; will be used in future to display & control access by fake players to your claims",
+	"ftbchunks.fake_players.max_prevented_log_age": "Fake Player Prevented Access Log Age",
+	"ftbchunks.fake_players.max_prevented_log_age.tooltip": "Age in days to keep logs of prevented fake player access\nNote: not fully implemented feature; will be used in future to display & control access by fake players to your claims",
 	"ftbchunks.claim_result": "Chunks modified: %d / %d",
 	"ftbchunks.claim_result.other": "Unknown issues",
 	"ftbchunks.claim_result.not_owner": "Not the chunk owner",
