--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -198,5 +198,11 @@
 	"ftbchunks.need_to_claim_chunk": "You need to claim this chunk to interact with blocks here!",
 	"ftbchunks.label.show": "Show",
 	"ftbchunks.label.hide": "Hide",
-	"ftbchunks.message.no_pvp": "PvP combat is disabled here"
+	"ftbchunks.message.no_pvp": "PvP combat is disabled here",
+	"ftbchunks.game_time": "Game Time: %s",
+	"ftbchunks.real_time": "Real Time: %s",
+	"ftbchunks.fps": "FPS: %d",
+	"ftbchunks.minimap.show_game_time": "Show Game Time",
+	"ftbchunks.minimap.show_fps": "Show FPS",
+	"ftbchunks.minimap.show_real_time": "Show Real Time"
 }
