--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -198,5 +198,14 @@
 	"ftbchunks.need_to_claim_chunk": "You need to claim this chunk to interact with blocks here!",
 	"ftbchunks.label.show": "Show",
 	"ftbchunks.label.hide": "Hide",
-	"ftbchunks.message.no_pvp": "PvP combat is disabled here"
+	"ftbchunks.message.no_pvp": "PvP combat is disabled here",
+	"ftbchunks.waypoint.shared": "Has shared %s with you",
+	"ftbchunks.waypoint.share": "Share",
+	"ftbchunks.waypoint.share.server": "Server",
+	"ftbchunks.waypoint.share.party": "Party",
+	"ftbchunks.waypoint.share.player": "Player",
+	"ftbchunks.waypoint_sharing": "Waypoint Sharing",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "Allow Sharing waypoints with Party",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "Allow Sharing waypoints with Server",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players"
 }
