Fix lang after other merges

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -207,7 +207,7 @@
 	"ftbchunks.waypoint_sharing": "Waypoint Sharing",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "Allow Sharing waypoints with Party",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "Allow Sharing waypoints with Server",
-	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players"
+	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players",
 	"ftbchunks.game_time": "Game Time: %s",
 	"ftbchunks.real_time": "Real Time: %s",
 	"ftbchunks.fps": "FPS: %d",
