--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -219,5 +219,26 @@
 	"ftbchunks.waypoint_sharing": "Waypoint Sharing",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "Allow Sharing waypoints with Party",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "Allow Sharing waypoints with Server",
-	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players"
+	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players",
+	"ftbchunks.map_mode.none": "None",
+	"ftbchunks.map_mode.night": "Night",
+	"ftbchunks.map_mode.topography": "Topography",
+	"ftbchunks.map_mode.blocks": "Blocks",
+	"ftbchunks.map_mode.light_sources": "Light Sources",
+	"ftbchunks.ally_mode.default": "Default",
+	"ftbchunks.ally_mode.forced_all": "Forced All",
+	"ftbchunks.ally_mode.forced_none": "Forced None",
+	"ftbchunks.pvp_mode.always": "Always",
+	"ftbchunks.pvp_mode.never": "Never",
+	"ftbchunks.pvp_mode.per_team": "Per Team",
+	"ftbchunks.party_limit_mode.largest": "Largest",
+	"ftbchunks.party_limit_mode.owner": "Owner",
+	"ftbchunks.party_limit_mode.sum": "Sum",
+	"ftbchunks.party_limit_mode.average": "Average",
+	"ftbchunks.force_load_mode.default": "Default",
+	"ftbchunks.force_load_mode.never": "Never",
+	"ftbchunks.force_load_mode.always": "Always",
+	"ftbchunks.time_mode.off": "Off",
+	"ftbchunks.time_mode.twenty_four": "Twenty Four",
+	"ftbchunks.time_mode.twelve": "Twelve"
 }
