More work in Minimap Info Screen

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -241,5 +241,7 @@
 	"ftbchunks.time_mode.off": "Off",
 	"ftbchunks.time_mode.twenty_four": "Twenty Four",
 	"ftbchunks.time_mode.twelve": "Twelve",
-	"ftbchunks.time_mode.clock": "Clock"
+	"ftbchunks.time_mode.clock": "Clock",
+	"tag.item.ftbchunks.right_click_blacklist": "Right Click Blacklist",
+	"tag.item.ftbchunks.right_click_whitelist": "Right Click Whitelist"
 }
