Finish Minimap Info GUI and few other cleanups

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -238,10 +238,30 @@
 	"ftbchunks.force_load_mode.default": "Default",
 	"ftbchunks.force_load_mode.never": "Never",
 	"ftbchunks.force_load_mode.always": "Always",
-	"ftbchunks.time_mode.off": "Off",
 	"ftbchunks.time_mode.twenty_four": "Twenty Four",
 	"ftbchunks.time_mode.twelve": "Twelve",
 	"ftbchunks.time_mode.clock": "Clock",
+	"ftbchunks.gui.move_up": "Move Up",
+	"ftbchunks.gui.move_down": "Move Down",
+	"minimap.info.ftbchunks.biome.title": "Biome",
+	"minimap.info.ftbchunks.biome.description": "Render Biome",
+	"minimap.info.ftbchunks.fps.title": "FPS",
+	"minimap.info.ftbchunks.fps.description": "Render FPS",
+	"minimap.info.ftbchunks.game_time.title": "Game Time",
+	"minimap.info.ftbchunks.game_time.description": "Render Game Time",
+	"minimap.info.ftbchunks.debug.title": "Debug",
+	"minimap.info.ftbchunks.debug.description": "Render Debug",
+	"minimap.info.ftbchunks.player_pos.title": "Player Pos",
+	"minimap.info.ftbchunks.player_pos.description": "Render Player Pos",
+	"minimap.info.ftbchunks.real_time.title": "Real Time",
+	"minimap.info.ftbchunks.real_time.description": "Render Real Time",
+	"minimap.info.ftbchunks.zone.title": "Zone",
+	"minimap.info.ftbchunks.zone.description": "Render Zone",
+	"ftbchunks.gui.toggle_visibility_off": "Toggle Visibility - Off",
+	"ftbchunks.gui.toggle_visibility_on": "Toggle Visibility - On",
+	"ftbchunks.gui.sort_minimap_info": "Minimap Info Settings",
+	"ftbchunks.minimap.info_hidden": "Hidden Minimap Info",
+	"ftbchunks.minimap.info_order": "Minimap info order",
 	"tag.item.ftbchunks.right_click_blacklist": "Right Click Blacklist",
 	"tag.item.ftbchunks.right_click_whitelist": "Right Click Whitelist"
 }
